--- a/index.html
+++ b/index.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>PIXIE SLIDE Game</title>
+	<title>Julian Schievelkamp</title>
 	
 	<link rel="shortcut icon" href="img/general/favicon.ico">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0" />
 	<meta charset="utf-8"/>
 
-	<meta name="description" content="Slide through multidimensional puzzles and reunite the lost tribes of Pixie! Upcoming mobile game, currently in development."/>
+	<meta name="description" content="Julian Schievelkamp"/>
 	<meta name="keywords" content="pixie, slide, mobile, puzzle, game"/>
-
-	<meta name="twitter:card" content="summary" />
-	<meta name="twitter:site" content="@PixieSlideGame" />
 
 	<meta property="og:url" content="https://julianschievelkamp.github.io/" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="PIXIE SLIDE Game" />
-	<meta property="og:description" content="Slide through multidimensional puzzles and reunite the lost tribes of Pixie! Upcoming mobile game, currently in development."/>
+	<meta property="og:title" content="Julian Schievelkamp" />
+	<meta property="og:description" content="Julian Schievelkamp"/>
 	<meta property="og:image" content="https://pixieslide.com/img/logo/logo.png" />
 		
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	
-	<link rel="stylesheet" href="css/queries.css">
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 	
